# cal8tor

./: Cargo.toml  README.md
src/: ics.rs  info.rs  io.rs  main.rs  models.rs  timetable.rs  utils.rs
src/timetable/: models.rs
src/utils/: models.rs
