[package]
name = "cal8tor"
version = "0.4.1"
authors = ["Mylloon"]
edition = "2021"
description = "Extractor of the calendar of the IT degree of university Paris 8"
readme = "README.md"
repository = "https://git.kennel.ml/Anri/cal8tor"
keywords = ["scrape", "calendar"]
publish = false

[dependencies]
reqwest = { version = "0.11" }
tokio = { version = ">=1.13.1", features = ["full"] }
scraper = "0.14"
regex = ">=1.5.5"
chrono = ">=0.4.23"
ics = "0.5"
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
clap = { version = "4.0.32", features = ["derive"] }
