[package]
name = "cal8tor"
version = "0.4.5"
authors = ["Mylloon"]
edition = "2021"
description = "Extractor of the calendar of the IT degree of university Paris 8"
readme = "README.md"
repository = "https://git.kennel.ml/Anri/cal8tor"
keywords = ["scrape", "calendar"]
publish = false
license = "AGPL-3.0-or-later"

[dependencies]
reqwest = { version = "0.11" }
tokio = { version = "1.32", features = ["full"] }
scraper = "0.17"
regex = "1.9"
chrono = "0.4.28"
ics = "0.5"
uuid = { version = "1.4", features = ["v4", "fast-rng"] }
clap = { version = "4.4", features = ["derive"] }
